# NatronPluginManager

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  cmake.yml  macos.yml  mingw.yml
docs/: CNAME  NatronPluginManager.desktop  NatronPluginManager.rc.in  _config.yml  assets.qrc  doc.html  index.md  macos.sh  mingw.md  mxe.sh  qt.md  repo.md  stylesheet.qss
share/: NatronPluginManager.icns  assets.qrc  community.xml  initGui.py  macos.sh  mingw.sh  mkhicolor.sh  mkicns.sh  mkico.sh  stylesheet.qss
src/: addrepodialog.cpp  addrepodialog.h  app.cpp  app.h  main.cpp  pluginlistwidget.cpp  pluginlistwidget.h  plugins.cpp  plugins.h  pluginviewwidget.cpp  pluginviewwidget.h  settingsdialog.cpp  settingsdialog.h  statuswidget.cpp  statuswidget.h
